--- a/testing.ipynb
+++ b/testing.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "374e38e5",
+   "metadata": {},
+   "source": [
+    "# Set up"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "id": "79f5072d",
    "metadata": {},
    "outputs": [
@@ -14,7 +22,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,6 +31,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import streamlit as st\n",
+    "import plotly.express as px\n",
     "\n",
     "\n",
     "df = pd.read_excel('Workout 2026.xlsx')[:6]\n",
@@ -31,8 +40,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a7bffda7",
+   "metadata": {},
+   "source": [
+    "# Getting the Daily Workouts"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "c51237d3",
    "metadata": {},
    "outputs": [
@@ -65,39 +82,620 @@
        " 'Saturday': ['Glute Press', 'Goblet Squat', 'Tricep Kickback']}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Excercises_Per_Day = {}\n",
+    "Workouts_Per_Day = {}\n",
     "for day in DOW:\n",
     "    current_day_excecises = df[day]\n",
-    "    Excercises_Per_Day[day] = []\n",
+    "    Workouts_Per_Day[day] = []\n",
     "\n",
     "\n",
     "    #print(current_day_excecises.dropna())\n",
     "\n",
     "    for item in current_day_excecises.dropna()[1:]:\n",
     "        if item != \"Relax - Stretch - Yoga\":\n",
-    "            Excercises_Per_Day[day].append(pd.read_excel('Workout 2026.xlsx', sheet_name=item)['Excercise Name'][0])\n",
+    "            Workouts_Per_Day[day].append(pd.read_excel('Workout 2026.xlsx', sheet_name=item)['Excercise Name'][0])\n",
     "    \n",
-    "Excercises_Per_Day"
+    "Workouts_Per_Day"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adc52cd7",
+   "metadata": {},
+   "source": [
+    "# Getting the Workout's Sheet from the .xlsx file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "03adb8cf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "config": {
+        "plotlyServerURL": "https://plot.ly"
+       },
+       "data": [
+        {
+         "hovertemplate": "Date=%{x}<br>Volume (lbs)=%{y}<extra></extra>",
+         "legendgroup": "",
+         "marker": {
+          "color": "#000001",
+          "pattern": {
+           "shape": ""
+          }
+         },
+         "name": "",
+         "orientation": "v",
+         "showlegend": false,
+         "textposition": "auto",
+         "type": "bar",
+         "x": [
+          "2026-01-04T00:00:00.000000000",
+          "2026-01-11T00:00:00.000000000",
+          "2026-01-18T00:00:00.000000000",
+          "2026-01-25T00:00:00.000000000",
+          "2026-02-01T00:00:00.000000000",
+          "2026-02-08T00:00:00.000000000",
+          "2026-02-15T00:00:00.000000000",
+          "2026-02-22T00:00:00.000000000",
+          "2026-03-01T00:00:00.000000000",
+          "2026-03-08T00:00:00.000000000",
+          "2026-03-15T00:00:00.000000000",
+          "2026-03-22T00:00:00.000000000",
+          "2026-03-29T00:00:00.000000000",
+          "2026-04-05T00:00:00.000000000",
+          "2026-04-12T00:00:00.000000000",
+          "2026-04-19T00:00:00.000000000",
+          "NaT",
+          "NaT",
+          "NaT",
+          "NaT",
+          "NaT",
+          "NaT",
+          "NaT"
+         ],
+         "xaxis": "x",
+         "y": {
+          "bdata": "AAAAAADghUAAAAAAAECKQAAAAAAAaJBAAAAAAAAAiUAAAAAAAACOQAAAAAAAwJJAAAAAAAAgjEAAAAAAAOCQQAAAAAAAGJVAAAAAAABAj0AAAAAAAMCSQAAAAAAAcJdAAAAAAAAwkUAAAAAAAKCUQAAAAAAAyJlAAAAAAADAkkAAAAAAAAD4fwAAAAAAAPh/AAAAAAAA+H8AAAAAAAD4fwAAAAAAAPh/AAAAAAAA+H8AAAAAAAD4fw==",
+          "dtype": "f8"
+         },
+         "yaxis": "y"
+        }
+       ],
+       "layout": {
+        "barmode": "relative",
+        "legend": {
+         "tracegroupgap": 0
+        },
+        "template": {
+         "data": {
+          "candlestick": [
+           {
+            "decreasing": {
+             "line": {
+              "color": "#000033"
+             }
+            },
+            "increasing": {
+             "line": {
+              "color": "#000032"
+             }
+            },
+            "type": "candlestick"
+           }
+          ],
+          "contour": [
+           {
+            "colorscale": [
+             [
+              0,
+              "#000011"
+             ],
+             [
+              0.1111111111111111,
+              "#000012"
+             ],
+             [
+              0.2222222222222222,
+              "#000013"
+             ],
+             [
+              0.3333333333333333,
+              "#000014"
+             ],
+             [
+              0.4444444444444444,
+              "#000015"
+             ],
+             [
+              0.5555555555555556,
+              "#000016"
+             ],
+             [
+              0.6666666666666666,
+              "#000017"
+             ],
+             [
+              0.7777777777777778,
+              "#000018"
+             ],
+             [
+              0.8888888888888888,
+              "#000019"
+             ],
+             [
+              1,
+              "#000020"
+             ]
+            ],
+            "type": "contour"
+           }
+          ],
+          "contourcarpet": [
+           {
+            "colorscale": [
+             [
+              0,
+              "#000011"
+             ],
+             [
+              0.1111111111111111,
+              "#000012"
+             ],
+             [
+              0.2222222222222222,
+              "#000013"
+             ],
+             [
+              0.3333333333333333,
+              "#000014"
+             ],
+             [
+              0.4444444444444444,
+              "#000015"
+             ],
+             [
+              0.5555555555555556,
+              "#000016"
+             ],
+             [
+              0.6666666666666666,
+              "#000017"
+             ],
+             [
+              0.7777777777777778,
+              "#000018"
+             ],
+             [
+              0.8888888888888888,
+              "#000019"
+             ],
+             [
+              1,
+              "#000020"
+             ]
+            ],
+            "type": "contourcarpet"
+           }
+          ],
+          "heatmap": [
+           {
+            "colorscale": [
+             [
+              0,
+              "#000011"
+             ],
+             [
+              0.1111111111111111,
+              "#000012"
+             ],
+             [
+              0.2222222222222222,
+              "#000013"
+             ],
+             [
+              0.3333333333333333,
+              "#000014"
+             ],
+             [
+              0.4444444444444444,
+              "#000015"
+             ],
+             [
+              0.5555555555555556,
+              "#000016"
+             ],
+             [
+              0.6666666666666666,
+              "#000017"
+             ],
+             [
+              0.7777777777777778,
+              "#000018"
+             ],
+             [
+              0.8888888888888888,
+              "#000019"
+             ],
+             [
+              1,
+              "#000020"
+             ]
+            ],
+            "type": "heatmap"
+           }
+          ],
+          "histogram2d": [
+           {
+            "colorscale": [
+             [
+              0,
+              "#000011"
+             ],
+             [
+              0.1111111111111111,
+              "#000012"
+             ],
+             [
+              0.2222222222222222,
+              "#000013"
+             ],
+             [
+              0.3333333333333333,
+              "#000014"
+             ],
+             [
+              0.4444444444444444,
+              "#000015"
+             ],
+             [
+              0.5555555555555556,
+              "#000016"
+             ],
+             [
+              0.6666666666666666,
+              "#000017"
+             ],
+             [
+              0.7777777777777778,
+              "#000018"
+             ],
+             [
+              0.8888888888888888,
+              "#000019"
+             ],
+             [
+              1,
+              "#000020"
+             ]
+            ],
+            "type": "histogram2d"
+           }
+          ],
+          "icicle": [
+           {
+            "textfont": {
+             "color": "white"
+            },
+            "type": "icicle"
+           }
+          ],
+          "sankey": [
+           {
+            "textfont": {
+             "color": "#000036"
+            },
+            "type": "sankey"
+           }
+          ],
+          "scatter": [
+           {
+            "marker": {
+             "line": {
+              "width": 0
+             }
+            },
+            "type": "scatter"
+           }
+          ],
+          "table": [
+           {
+            "cells": {
+             "fill": {
+              "color": "#000038"
+             },
+             "font": {
+              "color": "#000037"
+             },
+             "line": {
+              "color": "#000039"
+             }
+            },
+            "header": {
+             "fill": {
+              "color": "#000040"
+             },
+             "font": {
+              "color": "#000036"
+             },
+             "line": {
+              "color": "#000039"
+             }
+            },
+            "type": "table"
+           }
+          ],
+          "waterfall": [
+           {
+            "connector": {
+             "line": {
+              "color": "#000036",
+              "width": 2
+             }
+            },
+            "decreasing": {
+             "marker": {
+              "color": "#000033"
+             }
+            },
+            "increasing": {
+             "marker": {
+              "color": "#000032"
+             }
+            },
+            "totals": {
+             "marker": {
+              "color": "#000034"
+             }
+            },
+            "type": "waterfall"
+           }
+          ]
+         },
+         "layout": {
+          "coloraxis": {
+           "colorscale": [
+            [
+             0,
+             "#000011"
+            ],
+            [
+             0.1111111111111111,
+             "#000012"
+            ],
+            [
+             0.2222222222222222,
+             "#000013"
+            ],
+            [
+             0.3333333333333333,
+             "#000014"
+            ],
+            [
+             0.4444444444444444,
+             "#000015"
+            ],
+            [
+             0.5555555555555556,
+             "#000016"
+            ],
+            [
+             0.6666666666666666,
+             "#000017"
+            ],
+            [
+             0.7777777777777778,
+             "#000018"
+            ],
+            [
+             0.8888888888888888,
+             "#000019"
+            ],
+            [
+             1,
+             "#000020"
+            ]
+           ]
+          },
+          "colorscale": {
+           "diverging": [
+            [
+             0,
+             "#000021"
+            ],
+            [
+             0.1,
+             "#000022"
+            ],
+            [
+             0.2,
+             "#000023"
+            ],
+            [
+             0.3,
+             "#000024"
+            ],
+            [
+             0.4,
+             "#000025"
+            ],
+            [
+             0.5,
+             "#000026"
+            ],
+            [
+             0.6,
+             "#000027"
+            ],
+            [
+             0.7,
+             "#000028"
+            ],
+            [
+             0.8,
+             "#000029"
+            ],
+            [
+             0.9,
+             "#000030"
+            ],
+            [
+             1,
+             "#000031"
+            ]
+           ],
+           "sequential": [
+            [
+             0,
+             "#000011"
+            ],
+            [
+             0.1111111111111111,
+             "#000012"
+            ],
+            [
+             0.2222222222222222,
+             "#000013"
+            ],
+            [
+             0.3333333333333333,
+             "#000014"
+            ],
+            [
+             0.4444444444444444,
+             "#000015"
+            ],
+            [
+             0.5555555555555556,
+             "#000016"
+            ],
+            [
+             0.6666666666666666,
+             "#000017"
+            ],
+            [
+             0.7777777777777778,
+             "#000018"
+            ],
+            [
+             0.8888888888888888,
+             "#000019"
+            ],
+            [
+             1,
+             "#000020"
+            ]
+           ],
+           "sequentialminus": [
+            [
+             0,
+             "#000011"
+            ],
+            [
+             0.1111111111111111,
+             "#000012"
+            ],
+            [
+             0.2222222222222222,
+             "#000013"
+            ],
+            [
+             0.3333333333333333,
+             "#000014"
+            ],
+            [
+             0.4444444444444444,
+             "#000015"
+            ],
+            [
+             0.5555555555555556,
+             "#000016"
+            ],
+            [
+             0.6666666666666666,
+             "#000017"
+            ],
+            [
+             0.7777777777777778,
+             "#000018"
+            ],
+            [
+             0.8888888888888888,
+             "#000019"
+            ],
+            [
+             1,
+             "#000020"
+            ]
+           ]
+          },
+          "colorway": [
+           "#000001",
+           "#000002",
+           "#000003",
+           "#000004",
+           "#000005",
+           "#000006",
+           "#000007",
+           "#000008",
+           "#000009",
+           "#000010"
+          ]
+         }
+        },
+        "title": {
+         "text": "Double Arm Cable Curls"
+        },
+        "xaxis": {
+         "anchor": "y",
+         "domain": [
+          0,
+          1
+         ],
+         "title": {
+          "text": "Date"
+         }
+        },
+        "yaxis": {
+         "anchor": "x",
+         "domain": [
+          0,
+          1
+         ],
+         "title": {
+          "text": "Volume (lbs)"
+         }
+        }
+       }
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "day = 'Sunday'\n",
+    "# Excercise Name\tExcercise Description\tDate\tRest between Sets (Minutes)\tWeight (lbs)\tSets (Count)\tReps (Count)\tVolume (lbs)\n",
+    "\n",
+    "for workout in Workouts_Per_Day[day]:\n",
+    "    day_df = pd.read_excel('Workout 2026.xlsx', sheet_name=workout)\n",
+    "    day_df\n",
+    "px.bar(data_frame=day_df,x='Date', y='Volume (lbs)', title=day_df['Excercise Name'][1])"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
