unique day graphs using plotly

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "id": "79f5072d",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,58 +49,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "c51237d3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Sunday': ['Bent-Over Barbell Rows',\n",
-       "  'Overhead Cable Rows',\n",
-       "  'Table Top Rows (1 armed)',\n",
-       "  'Single Arm Cable Curls',\n",
-       "  'Double Arm Cable Curls'],\n",
-       " 'Monday': ['Push-Ups',\n",
-       "  'Standing Barbell Over Head Press',\n",
-       "  'Bent Over Lateral Raises',\n",
-       "  'Door Frame Goblin',\n",
-       "  'Push-Ups'],\n",
-       " 'Tuesday': ['Squats',\n",
-       "  'Skull Crushers EZ Bar',\n",
-       "  'Tricep Overhead Cable',\n",
-       "  'Tricep Cable Pushdowns'],\n",
-       " 'Wednesday': [],\n",
-       " 'Thursday': ['Deadlift',\n",
-       "  'Cable Face Pulls',\n",
-       "  'Barbell Shrugs',\n",
-       "  'EZ-Bar Curls'],\n",
-       " 'Friday': ['Bench Press',\n",
-       "  'Inclined Dumbell Press',\n",
-       "  'Flat Dumbell Flys',\n",
-       "  'Up-Right Lateral Raises'],\n",
-       " 'Saturday': ['Glute Press', 'Goblet Squat', 'Tricep Kickback']}"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Initalizing the Workouts_Per_Day dictionary that will be used through other pages\n",
     "Workouts_Per_Day = {}\n",
+    "\n",
+    "# Iterate over the days in the week\n",
     "for day in DOW:\n",
-    "    current_day_excecises = df[day]\n",
+    "    \n",
+    "    # Grab the daily excercises\n",
+    "    current_day_excercises = df[day]\n",
     "    Workouts_Per_Day[day] = []\n",
     "\n",
+    "    # Iterate over the excercises\n",
+    "    for item in current_day_excercises.dropna()[1:]:\n",
     "\n",
-    "    #print(current_day_excecises.dropna())\n",
-    "\n",
-    "    for item in current_day_excecises.dropna()[1:]:\n",
-    "        if item != \"Relax - Stretch - Yoga\":\n",
+    "        # Ensure it's not a rest day\n",
+    "        if item != \"Rest\":\n",
+    "            # Load in the Workout from the .xlsx excel sheet named 'item'\n",
     "            Workouts_Per_Day[day].append(pd.read_excel('Workout 2026.xlsx', sheet_name=item)['Excercise Name'][0])\n",
-    "    \n",
-    "Workouts_Per_Day"
+    "    "
    ]
   },
   {
@@ -113,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "id": "03adb8cf",
    "metadata": {},
    "outputs": [
