--- a/testing.ipynb
+++ b/testing.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "c51237d3",
    "metadata": {},
    "outputs": [],
@@ -69,8 +69,12 @@
     "\n",
     "        # Ensure it's not a rest day\n",
     "        if item != \"Rest\":\n",
+    "\n",
+    "            Excercise_df = pd.read_excel('Workout 2026.xlsx', sheet_name=item)\n",
+    "            Excercise_df.drop(['Unnamed: 8', 'Unnamed: 9'], axis=1, inplace=True)\n",
+    "            Excercise_df.to_csv(f\"./Datasets/{item}.csv\")\n",
     "            # Load in the Workout from the .xlsx excel sheet named 'item'\n",
-    "            Workouts_Per_Day[day].append(pd.read_excel('Workout 2026.xlsx', sheet_name=item)['Excercise Name'][0])\n",
+    "            Workouts_Per_Day[day].append(Excercise_df['Excercise Name'][0])\n",
     "    "
    ]
   },
@@ -84,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "03adb8cf",
    "metadata": {},
    "outputs": [
