updated Datasets strucutres

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -40,6 +40,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5a490b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load wrokouts from ./Datasets/Workouts_Per_Day.txt\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a7bffda7",
    "metadata": {},
@@ -76,6 +87,17 @@
     "            # Load in the Workout from the .xlsx excel sheet named 'item'\n",
     "            Workouts_Per_Day[day].append(Excercise_df['Excercise Name'][0])\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "199510e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for day in Workouts_Per_Day:\n",
+    "    pd.DataFrame(data=None, index=Workouts_Per_Day.items(), columns=Workouts_Per_Day.keys)"
    ]
   },
   {
